# SignalDetection

./: .gitignore  CLAUDE.md
detection/: CMakeLists.txt  cfar.c  cfar.h  check_formats.py  convert_testdata.py  detection.h  main_detect.c  narrowband.c  narrowband.h  scenario.c  scenario.h  scenario_example.json  sim_detect.py  wideband.c  wideband.h
docs/superpowers/plans/: 2026-06-01-signal-modulation.md  2026-06-18-iq-length-2048.md
docs/superpowers/specs/: 2026-06-01-signal-modulation-design.md
inference/: CMakeLists.txt  classifier.c  classifier.h  main.c  nn_forward.c  nn_forward.h  nn_weights.h  preprocess.c  preprocess.h  sr_estimate.c  sr_estimate.h
model/: amc_model.onnx  amc_model_fp32.onnx.data
tests/: test_classifier.c  test_dataset.py  test_model.py  test_preprocess.c  test_simulate.py
training/: confmat.py  dataset.py  eval_accuracy.py  eval_sr.py  evaluate.py  export.py  export_c.py  model.py  requirements.txt  simulate.py  train.py
